[gd_scene load_steps=11 format=3 uid="uid://djf4o55ymkyto"]

[ext_resource type="Shader" uid="uid://ccfmqty7q7s0k" path="res://citybg.gdshader" id="1_feb5d"]
[ext_resource type="Script" uid="uid://brhct6uu2cic" path="res://game.gd" id="1_ryrav"]
[ext_resource type="Texture2D" uid="uid://oa7pm7uskdtc" path="res://citybg.webp" id="2_fc0e3"]
[ext_resource type="Script" uid="uid://bnwjoxy1uw1ix" path="res://generator.gd" id="4_fc0e3"]
[ext_resource type="Script" uid="uid://cwgttu2p7os38" path="res://game_ui.gd" id="5_7jktm"]
[ext_resource type="Texture2D" uid="uid://d0owpslyklymo" path="res://floor_foreground.webp" id="7_eow3j"]
[ext_resource type="FontFile" uid="uid://eu77d364s52j" path="res://FOT-RodinWanpaku Pro EB.otf" id="8_j5wjh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ryrav"]
shader = ExtResource("1_feb5d")
shader_parameter/speed = 0.1

[sub_resource type="GDScript" id="GDScript_eow3j"]
script/source = "extends TextureRect


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.


func _on_exit_pressed() -> void:
	pass # Replace with function body.
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vef74"]
bg_color = Color(0, 0.7019608, 0.3764706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_color = Color(0, 0.39662516, 0.07263943, 0.6)
shadow_size = 2

[node name="gameplay" type="Node2D" node_paths=PackedStringArray("gameover", "restart")]
script = ExtResource("1_ryrav")
gameover = NodePath("CanvasLayer/Label")
restart = NodePath("CanvasLayer/restart")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 322)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -119.0
offset_top = -228.0
offset_right = 1315.0
offset_bottom = 1108.0
color = Color(0.60784316, 1, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="citybg" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_ryrav")
offset_left = -91.0
offset_top = -3.0
offset_right = 1215.0
offset_bottom = 771.0
texture = ExtResource("2_fc0e3")
script = SubResource("GDScript_eow3j")
metadata/_edit_use_anchors_ = true

[node name="spawner" type="Node2D" parent="." node_paths=PackedStringArray("scoreboard")]
position = Vector2(1291, 300)
script = ExtResource("4_fc0e3")
scoreboard = NodePath("../CanvasLayer/scoreboard")

[node name="ColorRect" type="ColorRect" parent="spawner"]
offset_left = -9.0
offset_top = -8.0
offset_right = 12.0
offset_bottom = 13.0
metadata/_edit_use_anchors_ = true

[node name="Tim" type="Timer" parent="spawner"]
wait_time = 3.5

[node name="Tim2" type="Timer" parent="spawner"]

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("pause", "resume", "lab", "restart")]
script = ExtResource("5_7jktm")
pause = NodePath("pause")
resume = NodePath("resume")
lab = NodePath("Label")
restart = NodePath("restart")

[node name="citybg2" type="TextureRect" parent="CanvasLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_ryrav")
offset_left = -92.0
offset_top = 629.0
offset_right = 1214.0
offset_bottom = 772.0
texture = ExtResource("7_eow3j")
script = SubResource("GDScript_eow3j")

[node name="scoreboard" type="Label" parent="CanvasLayer"]
offset_left = 419.0
offset_top = 24.0
offset_right = 570.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 442.0
offset_top = 117.0
offset_right = 664.0
offset_bottom = 174.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 41
text = "Game Over"

[node name="restart" type="Button" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_left = 489.0
offset_top = 236.0
offset_right = 629.0
offset_bottom = 300.0
theme_override_colors/icon_normal_color = Color(0.63529414, 0.8745098, 0.023529412, 1)
theme_override_colors/icon_focus_color = Color(0.63529414, 0.7882353, 0.015686275, 1)
theme_override_colors/icon_pressed_color = Color(0.4862745, 0.7882353, 0.24705882, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("8_j5wjh")
theme_override_styles/normal = SubResource("StyleBoxFlat_vef74")
text = "Restart"

[node name="pause" type="Button" parent="CanvasLayer"]
process_mode = 3
offset_left = 857.0
offset_top = 17.0
offset_right = 997.0
offset_bottom = 81.0
theme_override_colors/icon_normal_color = Color(0.63529414, 0.8745098, 0.023529412, 1)
theme_override_colors/icon_focus_color = Color(0.63529414, 0.7882353, 0.015686275, 1)
theme_override_colors/icon_pressed_color = Color(0.4862745, 0.7882353, 0.24705882, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("8_j5wjh")
theme_override_styles/normal = SubResource("StyleBoxFlat_vef74")
text = "Pause"

[node name="exit" type="Button" parent="CanvasLayer"]
process_mode = 3
offset_left = 1006.0
offset_top = 17.0
offset_right = 1146.0
offset_bottom = 81.0
theme_override_colors/icon_normal_color = Color(0.63529414, 0.8745098, 0.023529412, 1)
theme_override_colors/icon_focus_color = Color(0.63529414, 0.7882353, 0.015686275, 1)
theme_override_colors/icon_pressed_color = Color(0.4862745, 0.7882353, 0.24705882, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("8_j5wjh")
theme_override_styles/normal = SubResource("StyleBoxFlat_vef74")
text = "Exit"

[node name="resume" type="Button" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_left = 857.0
offset_top = 17.0
offset_right = 997.0
offset_bottom = 81.0
theme_override_colors/icon_normal_color = Color(0.63529414, 0.8745098, 0.023529412, 1)
theme_override_colors/icon_focus_color = Color(0.63529414, 0.7882353, 0.015686275, 1)
theme_override_colors/icon_pressed_color = Color(0.4862745, 0.7882353, 0.24705882, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("8_j5wjh")
theme_override_styles/normal = SubResource("StyleBoxFlat_vef74")
text = "Resume
"

[connection signal="pressed" from="CanvasLayer/restart" to="CanvasLayer" method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/pause" to="CanvasLayer" method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/exit" to="CanvasLayer" method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/resume" to="CanvasLayer" method="_on_resume_pressed"]
